# Elitra-OS

./: CHANGELOG.md  Makefile  README.md  linker.ld
arch/x86_64/: boot.asm  fpu.hpp  gdt.cpp  gdt.hpp  idt.cpp  idt.hpp  interrupt.asm  irq.cpp  irq.hpp  isr.cpp  isr.hpp  pci.cpp  pci.hpp  port.hpp  switch.asm  trampoline.asm  tss.cpp  tss.hpp
drivers/: acpi.cpp  acpi.hpp  ata_pio.cpp  ata_pio.hpp  cmos_rtc.cpp  cmos_rtc.hpp  e1000.cpp  e1000.hpp  framebuffer.cpp  framebuffer.hpp  net.cpp  net.hpp  ns16550.cpp  ns16550.hpp  pittimer.cpp  pittimer.hpp  ps2keyboard.cpp  ps2keyboard.hpp  ps2mouse.cpp  ps2mouse.hpp  terminal.cpp  terminal.hpp  vga.cpp  vga.hpp
fs/: ext2.cpp  ext2.hpp  fat32.cpp  fat32.hpp  mount.cpp  mount.hpp  vfs.cpp  vfs.hpp
kernel/: access_user.hpp  kernel.cpp  kernel.hpp  shell.cpp  shell.hpp  spinlock.hpp  syscall.cpp  syscall.hpp  task.cpp  task.hpp
kernel/src/: kernel_init.rs  lib.rs
krust/: Cargo.toml  target.json
krust/src/: fat32.rs  klib.rs  lib.rs  pmm.rs  serial.rs  vga.rs
lib/: lib.cpp  lib.hpp
loader/: elf.cpp  elf.hpp
mm/: heap.cpp  heap.hpp  memory.cpp  memory.hpp  paging.cpp  paging.hpp  pmm.cpp  pmm.hpp
progs/: hello.asm  hello.ld
rust-rt/: Makefile  build.rs  linker.ld  target.json
rust-rt/apps/: basename.rs  cat.rs  cp.rs  dirname.rs  echo.rs  env.rs  hello.rs  init.rs  ls.rs  pwd.rs  rm.rs  rmdir.rs  seq.rs  touch.rs  true.rs  (+2 more)
userspace/: Cargo.toml  crt0.asm
userspace/apps/: clear.rs  env.rs  false.rs  init.rs  mkdir.rs  mv.rs  sleep.rs  tee.rs  uname.rs  which.rs  yes.rs
userspace/src/: main.rs  rt.rs
(+78 files in other folders)
